--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.5.0",
+    "@react-navigation/bottom-tabs": "^7.7.3",
+    "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.20",
